# learn_astrology

./: README.md  pyproject.toml
vision/: gantt_chart.html  show_constellations_pie_msg.py  show_gante.py
